# Client

./: CMakeLists.txt  README.md  clientmodel.cpp  clientmodel.h  clientview.cpp  clientview.h  clientviewmodel.cpp  clientviewmodel.h  main.cpp  res.rc
GUI/: ButtonConnectToServer.qml  ClientFuncs.js  ClientWindow.qml  InputMessage.qml  InputTextMessages.qml  InputTextName.qml  InputTextPortClient.qml  InputTextServerIP.qml  ItemsForConnecting.qml  ListViewClientMessages.qml
